Aggiunto sviluppo contratto PdP PB

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -274,6 +274,27 @@ Federico Marchi & Progettista & 16 & ? & ? \\\hline
 Raffaele Oliviero & Verificatore & 3 & ? & ? \\\hline
 \end{tabular}
 
+\paragraph{Sviluppo Contratto (PB)}
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Progettista & 15 & ? & 25\euro & 375\euro & ?\euro \\\hline
+Verificatore & 3 & ? & 15\euro & 45\euro & ?\euro \\\hline
+Totale ore: & 18 & ? & Totale costi: & 420\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Matteo Galvagni & Progettista & 15 & ? & ? \\\hline
+Federico Marchi & Verificatore & 3 & ? & ? \\\hline
+\end{tabular}
+
 \paragraph{Test Automatici WebApp (PB)}
 Inizio: 26/02/2022\par
 Fine prevista: 02/03/2022\par
@@ -301,15 +322,15 @@ Fine effettiva: TBD
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Verificatore & 8 & ? & 15\euro & 120\euro & ?\euro \\\hline
-Totale ore: & 8 & ? & Totale costi: & 120\euro & ?\euro \\\hline
+Verificatore & 25 & ? & 15\euro & 375\euro & ?\euro \\\hline
+Totale ore: & 25 & ? & Totale costi: & 375\euro & ?\euro \\\hline
 \multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Federico Marchi & Verificatore & 8 & ? & ? \\\hline
+Matteo Galvagni & Verificatore & 25 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Test Automatici Server (PB)}
