Incremento versione PdP e PdQ

--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -19,6 +19,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{0.0.2}{16/01/2021}{Giovanni Cocco}{Redazione}{Migliorata la leggibilità.}
 \addversione{0.0.3}{04/02/2021}{Giovanni Cocco}{Redazione}{Stesura iniziale sezione software.}
 \addversione{0.0.4}{21/02/2021}{Giovanni Cocco}{Redazione}{Aggiunta dashboard al documento.}
+\addversione{0.0.5}{04/03/2022}{Andrea Volpe}{Redazione}{Aggiunta copertura test PB}
 
 \begin{document}
 
