--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -23,6 +23,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento impegni secondo Verbale del 04/02/2022}
 \addversione{0.0.2}{11/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento per RTB}
 \addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB}
+\addversione{1.0.1}{04/03/2022}{Andrea Volpe}{Redazione}{Aggiunta impegni PB}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
