Modificato verificatore manuale utente PdP

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -272,7 +272,7 @@ Ruoli assegnati:\\[0.5em]
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Alberto Nicoletti & Progettista & 16 & ? & ? \\\hline
 Federico Marchi & Progettista & 16 & ? & ? \\\hline
-Raffaele Oliviero & Verificatore & 3 & ? & ? \\\hline
+Andrea Volpe & Verificatore & 3 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Sviluppo Contratto (PB)}
@@ -350,7 +350,7 @@ Totale ore: & 30 & ? & Totale costi: & 450\euro & ?\euro \\\hline
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-\pbox{20cm}{(Andrea Volpe / Matteo Galvagni\\ / Alberto Nicoletti) ?} & Verificatore & 30 & ? & ? \\\hline
+\pbox{20cm}{(Andrea Volpe / Matteo Galvagni\\ / Alberto Nicoletti / Raffaele Oliviero) ?} & Verificatore & 30 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Test Automatici Script (PB)}
