--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -180,10 +180,10 @@ Giovanni Cocco & Verificatore & 0.5 & 0.5 & 0 \\\hline
 \end{tabular}
 
 \paragraph{Grafico di Gannt}
-Il grafico di Gannt può essere consultato al \underline{\href{https://docs.google.com/spreadsheets/d/e/2PACX-1vRd4970Fob6KlNwY1iV6bnHZXNl41F74utFkkc9ykuT1NUEGLnFcCd4rOHbXjW99ichDnkV3cEGCmWi/pubhtml?gid=1972921762}{seguente indirizzo}}.
+Il grafico di Gannt può essere consultato al seguente indirizzo: \underline{\href{https://tinyurl.com/swegannt}{https://tinyurl.com/swegannt}}.
 
 
 \subsection{Grafico dei costi}
-Il grafico dei costi può essere consultato al \underline{\href{https://docs.google.com/spreadsheets/d/e/2PACX-1vRd4970Fob6KlNwY1iV6bnHZXNl41F74utFkkc9ykuT1NUEGLnFcCd4rOHbXjW99ichDnkV3cEGCmWi/pubhtml?gid=263680959}{seguente indirizzo}}.
+Il grafico dei costi può essere consultato al seguente indirizzo: \underline{\href{https://tinyurl.com/swecosti}{https://tinyurl.com/swecosti}}.
 
 \end{document}
