--- a/docs/esterni/architettura/listaMetodi.tex
+++ b/docs/esterni/architettura/listaMetodi.tex
@@ -18,8 +18,9 @@
 Lista Metodi
 }
 
-\addversione{0.0.0}{23/2/2022}{Raffaele Oliviero}{Redazione}{Strutturazione del documento}
-\addversione{0.0.1}{04/3/2022}{Andrea Volpe}{Redazione}{Inserimento metodi pubblici}
+\addversione{0.0.0}{2/2/2022}{Raffaele Oliviero}{Redazione}{Strutturazione del documento}
+\addversione{0.0.1}{4/3/2022}{Andrea Volpe}{Redazione}{Inserimento metodi pubblici}
+\addversione{0.0.2}{5/3/2022}{Raffaele Oliviero}{Redazione}{Inserimento metodi pubblici e stesura \ref{tipi}}
 
 \begin{document}
 
@@ -31,30 +32,85 @@ Lista Metodi
 \subsection{Scopo del documento}
 Il documento elenca i metodi pubblici di ogni classe, descrivendone i loro parametri di invocazione, i loro return e il comportamento.
 
+\section{Tipi usati frequentemente}\label{tipi}
+Un breve elenco dei tipi comunemente usati e dei loro attributi
+
+\subsection{paymentEntry}
+Un \textbf{articolo} in vendita\\
+\textbf{Parametri:}
+\begin{itemize}
+\item[\texttt{id}]	l'id dell'articolo
+\item[\texttt{seller}] l'indirizzo del wallet del venditore
+\item[\texttt{price}] il prezzo in centesimi di dollaro
+\end{itemize}
+
+\subsection{settledPayment}
+Una \textbf{transazione}\\
+\textbf{Parametri:}
+\begin{itemize}
+\item[\texttt{id}]	l'id della transazione
+\item[\texttt{paymentEntryID}]	l'id dell'articolo acquistato
+\item[\texttt{client}] l'indirizzo del wallet dell'acquirente
+\item[\texttt{status}] lo stato della transazione con i seguenti significati:
+	\begin{itemize}
+	\item[\texttt{0}] la transazione è stata cancellata
+	\item[\texttt{1}] la transazione è stata pagata
+	\item[\texttt{2}] i fondi sono stati sbloccati
+	\item[\texttt{3}] la transazione è timed out
+	\end{itemize}
+\item[\texttt{created}] la date di creazione della transazione
+\item[\texttt{confirmed}] se la transazione è stata chiusa, ne indica la data di chiusura
+\end{itemize}
+
+\subsection{payment}
+Una \textbf{transazione} in cui sono contenute più informazioni\\
+\textbf{Parametri:}
+\begin{itemize}
+\item[\texttt{id}] l'id della transazione
+\item[\texttt{buyer}] l'indirizzo del wallet dell'acquirente
+\item[\texttt{seller}] l'indirizzo del wallet del venditore
+\item[\texttt{price}] il prezzo in centesimi di dollaro
+\item[\texttt{status}] lo stato della transazione con i seguenti significati:
+	\begin{itemize}
+	\item[\texttt{0}] la transazione è stata cancellata
+	\item[\texttt{1}] la transazione è stata pagata
+	\item[\texttt{2}] i fondi sono stati sbloccati
+	\item[\texttt{3}] la transazione è timed out
+	\end{itemize}
+\item[\texttt{created}] la data di creazione della transazione
+\item[\texttt{confirmed}] se la transazione è stata chiusa, ne indica la data di chiusura
+\end{itemize}
+
 \section{Lista dei metodi pubblici}
 \subsection{Persistence}
-
+class Persistence
 %variabili
 %\newcommand\linkServerManager{https://github.com/iota97/WinningSoftwareSolution/blob/main/server/Server/ServerManager.ts?}
 
-\subsubsection{getPaymentByBuyer(buyer)}
-Restituisce la lista delle transazioni il cui acquirente corrisponde a \texttt{buyer}. \\
-\texttt{buyer} è una stringa.
-
-\subsubsection{getPaymentBySeller()}
-\textbf{getPaymentBySeller(seller)} \\
-Restituisce la lista delle transazioni il cui venditore corrisponde a \texttt{seller}. \\
-\texttt{seller} è una stringa.
-
-\subsubsection{getPaymentByID()}
-\textbf{getPaymentByID(id)} \\
-Restituisce la transazione il cui ID corrisponde a \texttt{id} o, se esso non esiste, restituisce un messaggio di transazione inesistente \\
-\texttt{id} è un intero.
-
-\subsubsection{getPaymentEntryByID()}
-\textbf{getPaymentEntryByID(id)} \\
-Restituisce ID, venditore e prezzo dell'articolo il cui ID corrisponde a \texttt{id} o, se esso non esiste, restituisce un messaggio di articolo inesistente \\
-\texttt{buyer} è un intero.
+\subsubsection{getPaymentByBuyer(buyer): Promise$<$payment[ ]$>$}
+Restituisce le transazioni il cui acquirente corrisponde a \texttt{buyer}\\
+\textbf{Parametri}\\
+buyer: string\\
+\textbf{Valore Restituito}\\
+Promise$<$payment[ ]$>$
+\subsubsection{getPaymentBySeller(seller): Promise$<$payment[ ]$>$}
+Restituisce le transazioni il cui venditore corrisponde a \texttt{buyer}\\
+\textbf{Parametri}\\
+seller: string\\
+\textbf{Valore Restituito}\\
+Promise$<$payment[ ]$>$
+\subsubsection{getPaymentEntryByID(id): Promise$<$paymentEntry$>$}
+Restituisce il prodotto identificato da \texttt{it}\\
+\textbf{Parametri}\\
+id: bigint\\
+\textbf{Valore Restituito}\\
+Promise$<$paymentEntry$>$
+\subsubsection{getPaymentByID(id): Promise$<$payment$>$}
+Restituisce la transazione identificata da \texttt{id}\\
+\textbf{Parametri}\\
+id: bigint\\
+\textbf{Valore Restituito}\\
+Promise$<$payment$>$
 
 \subsection{ServerManager}
 class ServerManager
@@ -89,6 +145,64 @@ Chiude la connessione con il server\\
 \textbf{Parametri}\\
 \textbf{Valore Restituito}\\
 void
+
+\subsection{SQL\_Interface}
+interface SQL\_Interface
+\subsubsection{insertPaymentEntry(entry): Promise$<$void$>$}
+Inserisce un nuovo prodotto nel database\\
+\textbf{Parametri}\\
+entry: paymentEntry\\
+\textbf{Valore Restituito}\\
+Promise$<$void$>$
+\subsubsection{insertSettledPayment(entry): Promise$<$void$>$}
+Inserisce un nuovo pagamento nel database\\
+\textbf{Parametri}\\
+entry: settledPayment\\
+\textbf{Valore Restituito}\\
+Promise$<$void$>$
+\subsubsection{updateSettledPayment(id, status, timestamp): Promise$<$void$>$}
+Aggiorna un pagamento nel database\\
+\textbf{Parametri}\\
+id: bigint,\\ 
+status: number,\\
+timestamp: bigint\\
+\textbf{Valore Restituito}\\
+Promise$<$void$>$
+\subsubsection{getPaymentByBuyer(buyer): Promise$<$payment[ ]$>$}
+Restituisce i pagamenti di uno specifico acquirente\\
+\textbf{Parametri}\\
+buyer: string\\
+\textbf{Valore Restituito}\\
+Promise$<$payment[ ]$>$
+\subsubsection{getPaymentBySeller(seller): Promise$<$payment[ ]$>$}
+Restituisce i pagamenti di uno specifico venditore\\
+\textbf{Parametri}\\
+seller: string\\
+\textbf{Valore Restituito}\\
+Promise$<$payment[ ]$>$
+\subsubsection{getPaymentEntryByID(id): Promise$<$paymentEntry$>$}
+Restituisce uno specifico prodotto\\
+\textbf{Parametri}\\
+id: bigint\\
+\textbf{Valore Restituito}\\
+Promise$<$paymentEntry$>$
+\subsubsection{getPaymentByID(id): Promise$<$payment$>$}
+Restituisce uno specifico pagamento\\
+\textbf{Parametri}\\
+id: bigint\\
+\textbf{Valore Restituito}\\
+Promise$<$payment$>$
+\subsubsection{getLastSyncBlock(): Promise$<$number$>$}
+Restituisce l'ultimo blocco sincronizzato\\
+\textbf{Parametri}\\
+\textbf{Valore Restituito}\\
+Promise$<$number$>$
+\subsubsection{setLastSyncBlock(block): Promise $<$void$>$}
+Imposta l'ultimo blocco sincronizzato al valore passato come parametro\\
+\textbf{Parametri}\\
+block: number\\
+\textbf{Valore Restituito}\\
+Promise$<$void$>$
 
 \subsection{SQL}
 class SQL implements SQL\_Interface
@@ -218,4 +332,93 @@ db: Persistence\\
 \textbf{Valore Restituito}\\
 void
 
+\subsection{ShopContract\_Interface}
+interface ShopContract\_Interface
+\subsubsection{getBlockTime(block) : Promise$<$bigint$>$}
+Restituisce il timestamp di \texttt{block}\\
+\textbf{Parametri}\\
+block: number\\
+\subsubsection{addedPaymentEntry(options) : EventEmitter}
+Emette un evento di articolo aggiunto\\
+\textbf{Parametri}\\
+options: pastEventOptions
+\subsubsection{paymentSettled(options) : EventEmitter}
+Emette un evento di transazione effettuata\\
+\textbf{Parametri}\\
+options: pastEventOptions
+\subsubsection{statusChange(options) : EventEmitter}
+Emette un evento di cambio di stato\\
+\textbf{Parametri}\\
+options: pastEventOptions
+\subsubsection{getSettledPayment(id) : Promise$<$settledPayment$>$}
+Restituisce la transazione corrispondente a \texttt{id}\\
+\textbf{Parametri}\\
+id: bigint
+\subsubsection{getPaymentEntry(id) : Promise$<$settledPayment$>$}
+Restituisce l'articolo in vendita corrispondente a \texttt{id}\\
+\textbf{Parametri}\\
+id: bigint
+
+\subsection{ShopContract (typescript)}
+ShopContract implementa ShopContract\_Interface
+\subsubsection{getBlockTime(block) : Promise$<$bigint$>$}
+Restituisce il timestamp di \texttt{block}\\
+\textbf{Parametri}\\
+block: number\\
+\subsubsection{addedPaymentEntry(options) : EventEmitter}
+Emette un evento di articolo aggiunto\\
+\textbf{Parametri}\\
+options: pastEventOptions
+\subsubsection{paymentSettled(options) : EventEmitter}
+Emette un evento di transazione effettuata\\
+\textbf{Parametri}\\
+options: pastEventOptions
+\subsubsection{statusChange(options) : EventEmitter}
+Emette un evento di cambio di stato\\
+\textbf{Parametri}\\
+options: pastEventOptions
+\subsubsection{getSettledPayment(id) : Promise$<$settledPayment$>$}
+Restituisce la transazione corrispondente a \texttt{id}\\
+\textbf{Parametri}\\
+id: bigint
+\subsubsection{getPaymentEntry(id) : Promise$<$settledPayment$>$}
+Restituisce l'articolo in vendita corrispondente a \texttt{id}\\
+\textbf{Parametri}\\
+id: bigint
+
+\subsection{ShopContractEventManager}
+ShopContract implementa ShopContract\_Interface
+\subsubsection{Contstructor}
+
+\subsection{ShopContract (solidity)}
+\subsubsection{getLatestPrice() : uint256}
+Restituisce il prezzo aggiornato\\
+\subsubsection{checkUpkeep(calldata) : (bool, bytes)}
+Restituisce \texttt{true} se è passata una quantità di tempo maggiore di 60 secondi dall'ultimo controllo\\
+\textbf{Parametri}\\
+calldata: byte
+\subsubsection{performUpkeep(calldata) : void}
+Aggiorna le transazioni che sono scadute, cambiandone lo stato, e aggiorna i dati dell'ultimo controllo effettuato\\
+\textbf{Parametri}\\
+calldata: byte
+\subsubsection{settlePayment(paymentEntryId) : void}
+Controlla che i soldi ricevuti siano sufficienti a pagare il costo dell'articolo identificato da \texttt{paymentEntryId} e, in caso positivo, aggiunge una transazione alla lista delle transazioni, impostandone lo stato a \texttt{1}\\
+\textbf{Parametri}\\
+paymentEntryId: uint256
+\subsubsection{unlockFunds(settledPaymentId) : void}
+Controlla che chi ha inviato il messaggio corrisponda all'acquirente della transazione identificata da \texttt{settledPaymentId} e che la transazione sia in stato \texttt{1}; in caso positivo, trasferisce i fondi al venditore e imposta lo stato della transazione a \texttt{2}\\
+\textbf{Parametri}\\
+settledPaymentId: uint256
+\subsubsection{cancelPayment(settledPaymentId) : void}
+Controlla che chi ha inviato il messaggio corrisponda al venditore della transazione identificata da \texttt{settledPaymentId} e che la transazione sia in stato \texttt{1}; in caso positivo, restituisce i fondi all'acquirente e imposta lo stato della transazione a \texttt{0}\\
+\textbf{Parametri}\\
+settledPaymentId: uint256
+\subsubsection{getPaymentEntry(paymentEntryId) : PaymentEntry}
+Se esiste, restituisce l'articolo il cui id corrisponde a \texttt{paymentEntryId}\\
+\textbf{Parametri}\\
+paymentEntryId: uint256
+\subsubsection{getSettledPayment(settledPaymentId) : SettledPayment}
+Se esiste, restituisce la transazione il cui id corrisponde a \texttt{settledPaymentId}\\
+\textbf{Parametri}\\
+settledPaymentId: uint256
 \end{document}
