Fixed PdP e PdQ in base meeting 06-03-2022

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -240,7 +240,7 @@ Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
 Progettista & 25 & ? & 25\euro & 625\euro & ?\euro \\\hline
-Verificatore & 5 & ? & 15\euro & 75\euro & ?\euro \\\hline
+Verificatore & 6 & ? & 15\euro & 75\euro & ?\euro \\\hline
 Totale ore: & 30 & ? & Totale costi: & 700\euro & ?\euro \\\hline
 \multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
 \end{tabular}
@@ -250,7 +250,9 @@ Ruoli assegnati:\\[0.5em]
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Raffaele Oliviero & Progettista & 15 & ? & ? \\\hline
 Andrea Volpe & Progettista & 10 & ? & ? \\\hline
-\pbox{20cm}{(Giovanni Cocco / Matteo Galvagni\\ / Federico Marchi) ?} & Verificatore & 5 & ? & ? \\\hline
+Giovanni Cocco & Verificatore & 2 & ? & ? \\\hline
+Matteo Galvagni & Verificatore & 2 & ? & ? \\\hline
+Federico Marchi & Verificatore & 2 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Manuale Utente (PB)}
@@ -283,7 +285,7 @@ Fine effettiva: TBD
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Progettista & 24 & ? & 25\euro & 600\euro & ?\euro \\\hline
+Programmatore & 24 & ? & 25\euro & 600\euro & ?\euro \\\hline
 Verificatore & 3 & ? & 15\euro & 45\euro & ?\euro \\\hline
 Totale ore: & 27 & ? & Totale costi: & 645\euro & ?\euro \\\hline
 \multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
@@ -292,8 +294,54 @@ Totale ore: & 27 & ? & Totale costi: & 645\euro & ?\euro \\\hline
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Matteo Galvagni & Progettista & 24 & ? & ? \\\hline
+Matteo Galvagni & Programmatore & 24 & ? & ? \\\hline
 Federico Marchi & Verificatore & 3 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Sviluppo Server}
+Inizio: 10/02/2022\par
+Fine prevista: 05/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Programmatore & 70 & ? & 25\euro & 1750\euro & ?\euro \\\hline
+Verificatore & 20 & ? & 15\euro & 300\euro & ?\euro \\\hline
+Totale ore: & 90 & ? & Totale costi: & 2050\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Giovanni Cocco & Programmatore & 70 & ? & ? \\\hline
+Matteo Galvagni & Verificatore & 5 & ? & ? \\\hline
+Federico Marchi & Verificatore & 5 & ? & ? \\\hline
+Alberto Nicoletti & Verificatore & 5 & ? & ? \\\hline
+Andrea Volpe & Verificatore & 5 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Sviluppo Script}
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Programmatore & ? & ? & 25\euro & ?\euro & ?\euro \\\hline
+Verificatore & 1 & ? & 15\euro & 15\euro & ?\euro \\\hline
+Totale ore: & ? & ? & Totale costi: & ?\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Giovanni Cocco & Programmatore & 24 & ? & ? \\\hline
+Matteo Galvagni & Programmatore & 24 & ? & ? \\\hline
+Alberto Nicoletti & Verificatore & 1 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Test Automatici WebApp (PB)}
@@ -316,8 +364,8 @@ Elia Scandaletti & Verificatore & 35 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Test Automatici Contratto (PB)}
-Inizio: ?\par
-Fine prevista: 16/03/2022\par
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
 Fine effettiva: TBD
 
 Ore richieste:\\[0.5em]
@@ -335,8 +383,8 @@ Matteo Galvagni & Verificatore & 25 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Test Automatici Server (PB)}
-Inizio: ?\par
-Fine prevista: 16/03/2022\par
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
 Fine effettiva: TBD
 
 Ore richieste:\\[0.5em]
@@ -350,12 +398,12 @@ Totale ore: & 30 & ? & Totale costi: & 450\euro & ?\euro \\\hline
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-\pbox{20cm}{(Andrea Volpe / Matteo Galvagni\\ / Alberto Nicoletti / Raffaele Oliviero) ?} & Verificatore & 30 & ? & ? \\\hline
+Giovanni Cocco & Verificatore & 30 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Test Automatici Script (PB)}
-Inizio: ?\par
-Fine prevista: 16/03/2022\par
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
 Fine effettiva: TBD
 
 Ore richieste:\\[0.5em]
@@ -369,7 +417,7 @@ Totale ore: & 4 & ? & Totale costi: & 60\euro & ?\euro \\\hline
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-\pbox{20cm}{(Giovanni Cocco / Matteo Galvagni \\/ Alberto Nicoletti / Raffaele Oliviero) ?} & Verificatore & 30 & ? & ? \\\hline
+Giovanni Cocco & Verificatore & 4 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Grafico di Gannt}
