--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -94,16 +94,20 @@ L'insieme dei test verrà usato per assicurarsi di non introdurre regression dur
 \begin{tabular}{|l|l|}\hline
 	Data & Stato \\\hline
 	4/2/2022 & Creato PoC di test per il server (jtest)\\\hline
+	28/2/2022 & Creato test automatici script (pytest)\\\hline
+	2/3/2022 & Creato test automatici contratto (truffle)\\\hline
+	2/3/2022 & Creato test automatici WebApp (?)\\\hline
+	3/3/2022 & Creato test automatici server (jtest)\\\hline
 \end{tabular}
 
 \subsection{Aspettative di miglioramento}
 \begin{tabular}{|l|l|l|}\hline
 	Data & Obiettivo & Data realizzazione attesa \\\hline
 	20/1/2022 & Verificare la possibilità di test automatici del server & 7/2/2022\\\hline
+	26/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici della WebApp \\tramite ?} & 2/3/2022\\\hline
 	13/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici del contratto\\ tramite truffle} & 5/3/2022\\\hline
-	26/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici del JS \\tramite jest} & ?\\\hline
-	26/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici dello script \\python tramite pytest} & ?\\\hline
-	26/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici della WebApp \\tramite ?} & 5/3/2022\\\hline
+	26/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici del JS \\tramite jest} & 5/3/2022\\\hline
+	26/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici dello script \\python tramite pytest} & 5/3/2022\\\hline
 \end{tabular}
 
 
