--- a/docs/esterni/manuali/manuale_utente.tex
+++ b/docs/esterni/manuali/manuale_utente.tex
@@ -7,7 +7,7 @@
 \usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{placeins}
-\settitolo{Federico Marchi}
+\settitolo{Manuale Utente Shop Chain}
 \setredattori{WinningSoftwareSolution}
 \setdestuso{esterno}
 \setdescrizione{
@@ -21,7 +21,7 @@ Manuale utente.
 \newpage
 
 \section{Introduzione}
-Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un sistema decentralizzato per il pagamento di prodotti in cryptovalute. Utilizzando Shop Chain è possibile effettuare una qualsiasi attività di compravendita in maniera sicura per entrambi gli attori dello scambio. L'acquirente che desidera acquistare un prodotto da un venditore in un e-commerce potrà effettuare il suo pagamento in cryptovalute. Il venditore non può disporre immediatamente del saldo ricevuto poiché sarà bloccato fino alla ricezione del pacco, momento nel quale l'acquirente può sbloccare i fondi attraverso la scannerizzazione di un codice QR presente sulla scatola.
+Attraverso l'utilizzo della blockchain \textit{Polygon}, Shop Chain fornisce un sistema decentralizzato per il pagamento di prodotti in MATIC. Utilizzando Shop Chain è possibile effettuare una qualsiasi attività di compravendita in maniera sicura per entrambi gli attori dello scambio. L'acquirente che desidera acquistare un prodotto da un venditore in un e-commerce potrà effettuare il suo pagamento in MATIC. Il venditore non può disporre immediatamente del saldo ricevuto poiché sarà bloccato fino alla ricezione del pacco, momento nel quale l'acquirente può sbloccare i fondi attraverso la scannerizzazione di un codice QR presente sulla scatola.
 Il presente documento ha la funzione di descrivere in dettaglio la procedura da seguire per l'acquirente per il corretto acquisto di un item e sucessivo ritiro e sblocco fondi attraverso il servizio Shop Chain.
 
 
@@ -92,7 +92,7 @@ Attraverso la sezione "Outgoing" posta nel menù in alto a destra (Fig. 3) sarà
     \item \textbf{Open}: l'ordine è ancora aperto e in attesa di conferma;
     \item \textbf{Confirmed}: l'ordine è già stato confermato attraverso la scannerizzazione del codice QR;
     \item \textbf{Expired}: l'ordine è scaduto poiché sono passati 14 giorni senza che sia stato confermato manualmente dall'acquirente;
-    \item \textbf{Canceled}: l'ordine è stato rifiutato e dunque cancellato dall'ecommerce e non è più valido.
+    \item \textbf{Canceled}: l'ordine è stato rifiutato e dunque cancellato dall'ecommerce e non è più valido. I fondi utilizzati per il pagamento vengono restituiti all'acquirente nella valuta stabile DAI.
   \end{itemize}
 \end{itemize}
 
