--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -344,6 +344,30 @@ Matteo Galvagni & Programmatore & 24 & ? & ? \\\hline
 Alberto Nicoletti & Verificatore & 1 & ? & ? \\\hline
 \end{tabular}
 
+\paragraph{Sviluppo WebApp}
+Inizio: 26/02/2022\par
+Fine prevista: 16/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Programmatore & 46 & ? & 25\euro & 1150\euro & ?\euro \\\hline
+Verificatore & 10 & ? & 15\euro & 150\euro & ?\euro \\\hline
+Totale ore: & 56 & ? & Totale costi: & 1300\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Matteo Galvagni & Programmatore & 23 & ? & ? \\\hline
+Elia Scandaletti & Programmatore & 23 & ? & ? \\\hline
+Federico Marchi & Verificatore & 3 & ? & ? \\\hline
+Raffaele Oliviero & Verificatore & 4 & ? & ? \\\hline
+Andrea Volpe & Verificatore & 3 & ? & ? \\\hline
+\end{tabular}
+
 \paragraph{Test Automatici WebApp (PB)}
 Inizio: 26/02/2022\par
 Fine prevista: 02/03/2022\par
